--- a/partials/header.html
+++ b/partials/header.html
@@ -79,8 +79,8 @@
     <div class="nav-links" role="navigation" aria-label="Primary">
       <a href="/index.html">Home</a>
       <a href="/index.html#programs">Programs</a>
-      <a href="/blog/index.html">Blog</a>
-      <a href="/about/index.html">About</a>
+      <a href="/pages/blog/index.html">Blog</a>
+      <a href="/pages/about/index.html">About</a>
       <a href="mailto:tony@cybersmrt.org">Contact</a>
     </div>
   </nav>
