--- a/partials/footer.html
+++ b/partials/footer.html
@@ -78,8 +78,8 @@
     <nav class="footer-right" aria-label="Footer">
       <a href="/index.html">Home</a>
       <a href="/index.html#programs">Programs</a>
-      <a href="/blog/index.html">Blog</a>
-      <a href="/about/index.html">About</a>
+      <a href="/pages/blog/index.html">Blog</a>
+      <a href="/pages/about/index.html">About</a>
       <a href="mailto:tony@cybersmrt.org">Contact</a>
       <a href="https://www.linkedin.com/company/cybersmrt" target="_blank" rel="noopener">LinkedIn ↗</a>
     </nav>
