Updating sitemap/robots

--- a/partials/header.html
+++ b/partials/header.html
@@ -67,7 +67,7 @@
   </style>
 
   <nav class="site-nav">
-    <a class="nav-brand" href="/index.html" aria-label="CyberSmrt home">
+    <a class="nav-brand" href="/" aria-label="CyberSmrt home">
       <img src="/assets/logos/cybersmrt-logo-only.png" alt="" width="36" height="36" />
       <span>CYBERSMRT</span>
     </a>
@@ -77,10 +77,10 @@
     </button>
 
     <div class="nav-links" role="navigation" aria-label="Primary">
-      <a href="/index.html">Home</a>
-      <a href="/index.html#programs">Programs</a>
-      <a href="/pages/blog/index.html">Blog</a>
-      <a href="/pages/about/index.html">About</a>
+      <a href="/">Home</a>
+      <a href="/#programs">Programs</a>
+      <a href="/pages/blog/">Blog</a>
+      <a href="/pages/about/">About</a>
       <a href="mailto:tony@cybersmrt.org">Contact</a>
     </div>
   </nav>
